plugins/groovy/testdata/highlighting/ConstructorTypeArgs.groovy
print new <error descr="Groovy does not support constructor type arguments"><A></error>B<C>()

class A{}
class B<T>{}
class C{}